tests/ui/ferrocene/compiler-arguments/emit/emit_invalid.rs
//@ check-fail
//@ compile-flags: --emit=invalid
//~? ERROR unknown emission type

fn main() {}

// ferrocene-annotations: um_rustc_emit
